--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"prettier:check": "prettier --check --ignore-unknown ."
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.26.2"
 	},
 	"devDependencies": {
